feat: xorm + echo + swag + nsq
